{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 33,
  "lineage": "c9b98326-2bbb-b68f-0fe0-61f1a4db6a08",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bac7ac6080128ec",
            "domain": "vpc",
            "id": "eipalloc-05bac7ac6080128ec",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-5-172.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.5.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-ekstest-ap-south-1a",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest-ap-south-1a",
              "environment": "test"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:internet-gateway/igw-0f0cd43521ede7002",
            "id": "igw-0f0cd43521ede7002",
            "owner_id": "330190193859",
            "tags": {
              "Name": "test-ekstest",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest",
              "environment": "test"
            },
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bac7ac6080128ec",
            "connectivity_type": "public",
            "id": "nat-099057d9c1a86069a",
            "network_interface_id": "eni-0c9dc694ba5f879ff",
            "private_ip": "10.0.101.64",
            "public_ip": "3.6.5.172",
            "subnet_id": "subnet-0d04def958b2c59b0",
            "tags": {
              "Name": "test-ekstest-ap-south-1a",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest-ap-south-1a",
              "environment": "test"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a912e0173ef2567c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-099057d9c1a86069a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a912e0173ef2567c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0cd43521ede7002",
            "id": "r-rtb-0d240c924ebbfa7611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d240c924ebbfa761",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:route-table/rtb-0a02bc291da12aea4",
            "id": "rtb-0a02bc291da12aea4",
            "owner_id": "330190193859",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-ekstest-db",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest-db",
              "environment": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:route-table/rtb-0a912e0173ef2567c",
            "id": "rtb-0a912e0173ef2567c",
            "owner_id": "330190193859",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-ekstest-private",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest-private",
              "environment": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:route-table/rtb-0d240c924ebbfa761",
            "id": "rtb-0d240c924ebbfa761",
            "owner_id": "330190193859",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-ekstest-public",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest-public",
              "environment": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff41ea9e2d63ea5",
            "route_table_id": "rtb-0a02bc291da12aea4",
            "subnet_id": "subnet-0441ab1a1deaf159f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068de412652515823",
            "route_table_id": "rtb-0a02bc291da12aea4",
            "subnet_id": "subnet-0eaa32f8b88648e1e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055f44f5e8fc12818",
            "route_table_id": "rtb-0a912e0173ef2567c",
            "subnet_id": "subnet-0ebb5044619290578"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eddaa79c06a42875",
            "route_table_id": "rtb-0a912e0173ef2567c",
            "subnet_id": "subnet-0dd0808cacc8bec5a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cba286a66b443e07",
            "route_table_id": "rtb-0d240c924ebbfa761",
            "subnet_id": "subnet-0d04def958b2c59b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087bc9c4735fe4dde",
            "route_table_id": "rtb-0d240c924ebbfa761",
            "subnet_id": "subnet-0320063b0e8eb8175"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:subnet/subnet-0441ab1a1deaf159f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0441ab1a1deaf159f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330190193859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ekstest-db-ap-south-1a",
              "Type": "database-subnets",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest-db-ap-south-1a",
              "Type": "database-subnets",
              "environment": "test"
            },
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:subnet/subnet-0eaa32f8b88648e1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaa32f8b88648e1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330190193859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ekstest-db-ap-south-1b",
              "Type": "database-subnets",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest-db-ap-south-1b",
              "Type": "database-subnets",
              "environment": "test"
            },
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:subnet/subnet-0ebb5044619290578",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebb5044619290578",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330190193859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ekstest-private-ap-south-1a",
              "Type": "private-subnets",
              "environment": "test",
              "kubernetes.io/cluster/test-ekstest": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-ekstest-private-ap-south-1a",
              "Type": "private-subnets",
              "environment": "test",
              "kubernetes.io/cluster/test-ekstest": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:subnet/subnet-0dd0808cacc8bec5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd0808cacc8bec5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330190193859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ekstest-private-ap-south-1b",
              "Type": "private-subnets",
              "environment": "test",
              "kubernetes.io/cluster/test-ekstest": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-ekstest-private-ap-south-1b",
              "Type": "private-subnets",
              "environment": "test",
              "kubernetes.io/cluster/test-ekstest": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:subnet/subnet-0d04def958b2c59b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04def958b2c59b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330190193859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ekstest-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "test",
              "kubernetes.io/cluster/test-ekstest": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-ekstest-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "test",
              "kubernetes.io/cluster/test-ekstest": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:subnet/subnet-0320063b0e8eb8175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0320063b0e8eb8175",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330190193859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ekstest-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "test",
              "kubernetes.io/cluster/test-ekstest": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-ekstest-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "test",
              "kubernetes.io/cluster/test-ekstest": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0135646670c9daaec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:330190193859:vpc/vpc-0135646670c9daaec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad8c54dad4dab5d0",
            "default_route_table_id": "rtb-0b751eff7094572b6",
            "default_security_group_id": "sg-0909a238977600cbf",
            "dhcp_options_id": "dopt-0113c82541858acc0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0135646670c9daaec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b751eff7094572b6",
            "owner_id": "330190193859",
            "tags": {
              "Name": "test-ekstest",
              "environment": "test"
            },
            "tags_all": {
              "Name": "test-ekstest",
              "environment": "test"
            }
          }
        }
      ]
    }
  ]
}